source/app/static/assets/css/alerts.css
.alert-card {
    position: relative;
    border-radius: 35px;
    margin-bottom: 10px;
}

.alert-card .alert-actions {
  display: none;
}

.alert-card:hover .alert-actions {
  display: block;
}

.alert-actions {
  position: absolute;
  bottom: 7px;
  right: 0;
  background-color: rgba(255, 255, 255, 0.35);
  padding: 10px;
  justify-content: space-between;
  border-radius: 15px;
}

.btn-alert-primary {
  background: #445169 !important;
  border-color: #445169 !important;
    color: white;
}

.btn-alert-success {
  background: #32B67A !important;
  border-color: #32B67A !important;
    color: white;
}

.btn-alert-danger {
  background: #E9727D !important;
  border-color: #E9727D !important;
    color: white;
}

.bg-alert-success {
  background-color: #32B67A !important;
}

.bg-alert-danger {
  background-color: #E9727D !important;
}

.bg-muted {
  background-color: #6b6d73 !important;
}

.bg-low {
  background-color: #ffdc71 !important;
}

.bg-critical {
  background-color: #7d0fdd !important;
}

.alert-m-title-critical:hover {
  color: #7d0fdd;
}
.alert-m-title-danger:hover {
  color: #F25961;
}
.alert-m-title-warning:hover {
  color: #FFAD46;
}
.alert-m-title-info:hover {
  color: #48ABF7;
}
.alert-m-title-low:hover {
  color: #ffdc71;
}
.alert-m-title-muted:hover {
  color: #6b6d73;
}

.enrichment-dl {
  font-size: 0.9em;
  max-height: 200px;
  overflow-y: auto;
  margin-bottom: 0;
}

.enrichment-dl dt {
  font-weight: bold;
}

.enrichment-dl dd {
  margin-left: 20px;
  margin-bottom: 8px;
}


.alert-m-title{
  cursor: pointer;
}

.avatar-wrapper {
    position: relative;
    display: inline-flex;
}

.envelope-icon {
    position: absolute;
    top: 75px;
    left: 50%;
    transform: translateX(-50%);
    font-size: 16px;
}

.pre-scrollable {
  white-space: pre-wrap;
  word-wrap: break-word;
}

.similar-alert-graph {
    background-color: #f2f2f2;
    border-radius: 25px;
}

.hidden {
  display: none;
}

#context-menu {
  position: absolute;
  z-index: 100;
  background-color: white;
  border: 1px solid black;
  padding: 10px;
}

#context-menu ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

#context-menu li {
  padding: 5px;
  cursor: pointer;
}

#context-menu li:hover {
  background-color: #f0f0f0;
}

.alert-card-done {
  background-color: #f2f2f2;
}

.alert-card-new .alert-bade-status {
    background-color: #9D2F35;
  color: white;
}

.trash-wrapper {
    position: absolute;
    right: 18px;
    top: 50%;
    transform: translateY(-50%);
}

